Implemented Game and GameHandler classes partially. Added movement handling partially.

--- a/MobaBoardGame/MobaBoardGame/MobaBoardGame.vcxproj
+++ b/MobaBoardGame/MobaBoardGame/MobaBoardGame.vcxproj
@@ -166,16 +166,18 @@
     <ClCompile Include="ActiveEntity.cpp" />
     <ClCompile Include="ArmorEffect.cpp" />
     <ClCompile Include="AttackPointEffect.cpp" />
-    <ClCompile Include="BasicSquare.cpp" />
     <ClCompile Include="BloodAnguishAbility.cpp" />
+    <ClCompile Include="ActiveEntityImage.cpp" />
+    <ClCompile Include="GameHandler.cpp" />
     <ClCompile Include="GameSquare.cpp" />
     <ClCompile Include="CharacterFactory.cpp" />
     <ClCompile Include="Creature.cpp" />
     <ClCompile Include="GameBoard.cpp" />
-    <ClCompile Include="ImpassableBoardSquare.cpp" />
+    <ClCompile Include="ImpassableSquare.cpp" />
     <ClCompile Include="MapEditor.cpp" />
     <ClCompile Include="MapEditorHandler.cpp" />
     <ClCompile Include="MovementPointEffect.cpp" />
+    <ClCompile Include="PassableSquare.cpp" />
     <ClCompile Include="PhysicalDamageEffect.cpp" />
     <ClCompile Include="HealthDrainEffect.cpp" />
     <ClCompile Include="LifeHarvestAbility.cpp" />
@@ -205,16 +207,18 @@
     <ClInclude Include="ActiveEntity.h" />
     <ClInclude Include="ArmorEffect.h" />
     <ClInclude Include="AttackPointEffect.h" />
-    <ClInclude Include="BasicSquare.h" />
     <ClInclude Include="BloodAnguishAbility.h" />
+    <ClInclude Include="ActiveEntityImage.h" />
+    <ClInclude Include="GameHandler.h" />
     <ClInclude Include="GameSquare.h" />
     <ClInclude Include="CharacterFactory.h" />
     <ClInclude Include="Creature.h" />
     <ClInclude Include="GameBoard.h" />
-    <ClInclude Include="ImpassableBoardSquare.h" />
+    <ClInclude Include="ImpassableSquare.h" />
     <ClInclude Include="MapEditor.h" />
     <ClInclude Include="MapEditorHandler.h" />
     <ClInclude Include="MovementPointEffect.h" />
+    <ClInclude Include="PassableSquare.h" />
     <ClInclude Include="PhysicalDamageEffect.h" />
     <ClInclude Include="HealthDrainEffect.h" />
     <ClInclude Include="LifeHarvestAbility.h" />
@@ -235,6 +239,7 @@
     <ClInclude Include="Ability.h" />
     <ClInclude Include="ActionPointEffect.h" />
     <ClInclude Include="SquareType.h" />
+    <ClInclude Include="Team.h" />
     <ClInclude Include="VoidParalyseAbility.h" />
     <ClInclude Include="VoidRendAbility.h" />
     <ClInclude Include="VoidShotPassive.h" />
